--- a/styles/globals.css
+++ b/styles/globals.css
@@ -77,6 +77,9 @@
   h1 {
       @apply font-bold text-3xl
   }
+  h2 {
+    @apply font-semibold text-xl
+  }
 }
 
 /* For Webkit-based browsers (Chrome, Safari and Opera) */
